# Interpreter

./: CMakeLists.txt  ComparePrograms.h  DokWstepna.md  DokumentacjaWstepna.md  Interpreter.cpp  Interpreter.h  InterpreterException.cpp  InterpreterException.h  LangExamples  LexToken.cpp  LexToken.h  Lexer.cpp  Lexer.h  LexicalError.cpp  LexicalError.h  Main.cpp  OverflowChecks.cpp  OverflowChecks.h  Parser.cpp  Parser.h  ParserImpl.cpp  ParserImpl.h  ParserObjects.cpp  ParserObjects.h  PathConfig.h.in  Position.h  README.md  StringConversion.h  Value.cpp  Value.h
ExampleCodes/: TestCode.txt  TestCode2.txt  TestCode3.txt
ParserObjects/: Core.h  Expressions.cpp  Expressions.h  FunctionExpressions.h  ParserObjects.h  Statements.cpp  Statements.h
Tests/: CMakeLists.txt  InterpreterTests.cpp  LexerTest.cpp  ParserTests.cpp  ParserTestsNewConvention.cpp  Test.cpp  ValueTests.cpp
